Update endpoint that return a login status
